insta/tests/snapshots/test_redaction__with_random_value_inline_callback.snap
---
source: tests/test_redaction.rs
expression: "&User\n{\n    id: 23, username: \"john_doe\".to_string(), email:\n    Email(\"john@example.com\".to_string()), extra: \"\".to_string(),\n}"
---
id: "[id]"
username: john_doe
email: john@example.com
extra: ""
