insta/tests/snapshots/test_redaction__with_random_value_json_settings2.snap
---
source: tests/test_redaction.rs
expression: "&User\n{\n    id: 975, username: \"jason_doe\".to_string(), email:\n    Email(\"jason@example.com\".to_string()), extra:\n    \"ssn goes here\".to_string(),\n}"
---
{
  "id": "[id]",
  "username": "jason_doe",
  "email": "jason@example.com",
  "extra": "[extra]"
}
